@@ -1,3 +1,8 @@
+2018-11-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Improve handling of right subtraction operand in a.
+
 2018-11-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
